fix toggle theme icon not showing

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -1024,7 +1024,7 @@ textarea {
 			opacity: 0;
 			transform: scale(0.9);
 
-			.active {
+			&.active {
 				display: inline-block;
 				opacity: 1;
 			}
